# vcbld

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build-linux.sh  build-w32.bat  build-w64.bat  packages.json  vcbld.json
Documentation/: confjson.txt  vcbldjson.txt
Templates/: conf.json  vcbld.json
documentation/: confjson.txt  packagesjson.txt  vcbldjson.txt
src/: CMakeLists.txt  args.cpp  args.h  builder.cpp  builder.h  cmake.cpp  cmake.h  conf.cpp  conf.h  fs.h  gen.cpp  gen.h  help.cpp  help.h  includePath.txt  init.cpp  init.h  main.cpp  parser.cpp  parser.h  pch.h  pkg.cpp  pkg.h  predefs.h  prep.cpp  prep.h  vcbld.cpp  vcbld.h  vcbld.h.in
templates/: conf.json  vcbld.json
tests/: CMakeLists.txt  buildTest.cpp  confTest.cpp  genTest.cpp  initTest.cpp  initTest.h  pkgTest.cpp  prepTest.cpp  test.cpp
vcbld-gui/: CMakeLists.txt  add.cpp  add.h  add.ui  dialog.cpp  dialog.h  dialog.ui  helper.cpp  helper.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pkgdialog.cpp  pkgdialog.h  pkgdialog.ui  qpch.cpp  qpch.h  remove.cpp  remove.h  remove.ui  setup.cpp  setup.h  setup.ui  setupdialog.cpp  setupdialog.h  setupdialog.ui  vcbldgui.cpp  vcbldgui.h  vcbldgui.h.in
